# HSG

./: .clang-format  .gitignore  24-500.txt  CMakeLists.txt  DB.sh  DI.sh  DR.sh  PT.sh  README.markdown  README.md  TODO.markdown  TODO_ccvi.markdown  TODO_ehnsw.markdown  TODO_nnhnsw.markdown  WRA.sh  a.sh  arrange.sh  b.sh  build.sh  c.sh  debug.sh  do.py  g.sh  generate.sh  gist.sh  hnsw.sh  nohup.out  optimize.sh  r.sh  setup.py  sift1B.sh  test1.txt
data/fashion-mnist/: delete50irrelevant.binary  detail-analysis.txt  fashion-mnist.py  generate.py  readme.markdown  save10relevant.binary
data/gist/: delete50irrelevant.binary  generate.py  gist.py  readme.markdown  save10relevant.binary
data/sift/: diff  diff_ids  gen_data.py  generated_data.py  readme.markdown  sift.py
data/sift10M/: generate.py  save100relevant.binary  save10relevant.binary
data/sift1B/: generate.py  readme.markdown
example/: CMakeLists.txt  ccvi_example.cpp  dccvi_example.cpp  dehnsw_example.cpp  ehnsw_example.cpp  example.cpp  example.py  load_from_fvecs_and_ivecs.markdown  miluann_example.cpp
python_binding/: ccvipy.cpp  dccvipy.cpp  dehnswpy.cpp  ehnswpy.cpp
scripts/: WRA.sh  build.sh  debug.sh  hnsw.sh
scripts/delete/: fashion-mnist-DB.sh  fashion-mnist-DI.sh  fashion-mnist-DR.sh  fashion-mnist.sh  gist-DB.sh  gist-DI.sh  gist-DR.sh  gist.sh  sift10M-DB.sh  sift10M-DI.sh  sift10M-DR.sh  sift10M.sh
scripts/hnsw/: fashion-mnist.sh  gist.sh  sift10M.sh
scripts/optimize/: fashion-mnist.sh  gist.sh  sift10M.sh
scripts/performence/: fashion-mnist.sh  gist.sh  sift10M.sh
source/: CMakeLists.txt  HSG.h  ccvi.h  dccvi.h  dehnsw.h  distance.h  ehnsw.h  main.cpp  miluann.h  nnhnsw.h  space.h  useless.cpp
source/algorithm/: distance.h
source/bruteforce/: CMakeLists.txt  bruteforce.h  bruteforce.hpp
source/distance/: CMakeLists.txt  cosine_similarity.h  distance.h  distance.hpp  euclidean2.h  inner_product.h
source/index/: nnhnsw.h
source/nnhnsw/: CMakeLists.txt  data_struct.h  data_struct.hpp  nnhnsw.h  nnhnsw.hpp
source/struct/: data_struct.h
test/: CMakeLists.txt  NSG.cpp  PT.cpp  debug.cpp  delete.cpp  delete_both.cpp  delete_irrelevant.cpp  delete_relevant.cpp  hnsw.cpp  optimize.cpp  performence.cpp  test.cpp  universal.h  write_reference_answer.cpp
