# add_library(miluann SHARED)
# set_target_properties(miluann PROPERTIES LINKER_LANGUAGE CXX)
# target_sources(miluann
#         PUBLIC
#         ${CMAKE_CURRENT_LIST_DIR}/miluann.h
#         PRIVATE
#         ${CMAKE_CURRENT_LIST_DIR}/distance.h
# )
# target_include_directories(miluann
#         PUBLIC
#         ${CMAKE_CURRENT_LIST_DIR}
# )
