# add_library(HSG SHARED)
# set_target_properties(HSG PROPERTIES LINKER_LANGUAGE CXX)
# target_sources(HSG
#         PUBLIC
#         ${CMAKE_CURRENT_LIST_DIR}/HSG.h
#         PRIVATE
#         ${CMAKE_CURRENT_LIST_DIR}/distance.h
# )
# target_include_directories(HSG
#         PUBLIC
#         ${CMAKE_CURRENT_LIST_DIR}
# )
